syntax = "proto3";

//option java_multiple_files = true;
//option java_package = "io.grpc.examples.helloworld";
//option java_outer_classname = "HelloWorldProto";
//option objc_class_prefix = "HLW";

package ping;

// The greeting service definition.
service PingTest {
  // Sends a greeting
  rpc SendPing (EchoRequest) returns (EchoReply) {}
  //rpc SayHello (HelloRequest) returns
}

// The request message containing the user's name.
message EchoRequest {
    string reqMsg = 1;
}

// The response message containing the greetings
message EchoReply {
  string repMsg = 1;
}

